@@ -31,6 +31,10 @@
 #include <string.h>
 #include <netinet/in.h>
 
+#ifndef HAVE_GETADDRINFO_ET_AL
+#include <stdlib.h> /* For atoi */
+#endif /* ndef HAVE_GETADDRINFO_ET_AL */
+
 #include "config.h"
 #include "driver.h"
 #include "game.h"
@@ -41,7 +45,9 @@
 typedef union {
 	struct sockaddr sa;
 	struct sockaddr_in in;
+#ifdef HAVE_GETADDRINFO_ET_AL
 	struct sockaddr_in6 in6;
+#endif /* HAVE_GETADDRINFO_ET_AL */
 } sockaddr_t;
 
 #ifdef DEBUG
@@ -389,8 +395,14 @@ gboolean net_connected(Session * ses)
 
 gboolean net_connect(Session * ses, const gchar * host, const gchar * port)
 {
+#ifdef HAVE_GETADDRINFO_ET_AL
 	int err;
 	struct addrinfo hints, *ai, *aip;
+#else
+	gint iii;
+	struct hostent *he;
+	struct sockaddr_in addr;
+#endif /* HAVE_GETADDRINFO_ET_AL */
 
 	net_close(ses);
 	if (ses->host != NULL)
@@ -398,6 +410,7 @@ gboolean net_connect(Session * ses, const gchar * host, const gchar * port)
 	ses->host = g_strdup(host);
 	ses->port = g_strdup(port);
 
+#ifdef HAVE_GETADDRINFO_ET_AL
 	memset(&hints, 0, sizeof(hints));
 	hints.ai_family = PF_UNSPEC;
 	hints.ai_socktype = SOCK_STREAM;
@@ -416,9 +429,15 @@ gboolean net_connect(Session * ses, const gchar * host, const gchar * port)
 			    host, port);
 		return FALSE;
 	}
+#endif /* HAVE_GETADDRINFO_ET_AL */
 
+#ifdef HAVE_GETADDRINFO_ET_AL
 	for (aip = ai; aip; aip = aip->ai_next) {
 		ses->fd = socket(aip->ai_family, SOCK_STREAM, 0);
+#else /* HAVE_GETADDRINFO_ET_AL */
+	for (iii=0; iii < 1; ++iii) { /* Loop only once */
+		ses->fd = socket(AF_INET, SOCK_STREAM, 0);
+#endif /* HAVE_GETADDRINFO_ET_AL */
 		if (ses->fd < 0) {
 			log_message(MSG_ERROR,
 				    _("Error creating socket: %s\n"),
@@ -444,7 +463,16 @@ gboolean net_connect(Session * ses, const gchar * host, const gchar * port)
 			continue;
 		}
 
+#ifdef HAVE_GETADDRINFO_ET_AL
 		if (connect(ses->fd, aip->ai_addr, aip->ai_addrlen) < 0) {
+#else /* HAVE_GETADDRINFO_ET_AL */
+		he = gethostbyname(host);
+		addr.sin_family = AF_INET;
+		addr.sin_port = htons(atoi(port));
+		addr.sin_addr = *((struct in_addr *)he->h_addr);
+		memset(&addr.sin_zero, 0, 8);
+		if (connect(ses->fd, (struct sockaddr*)&addr, sizeof(struct sockaddr)) < 0) {
+#endif /* HAVE_GETADDRINFO_ET_AL */
 			if (errno == EINPROGRESS) {
 				ses->connect_in_progress = TRUE;
 				listen_write(ses, TRUE);
@@ -462,7 +490,9 @@ gboolean net_connect(Session * ses, const gchar * host, const gchar * port)
 			listen_read(ses, TRUE);
 	}
 
+#ifdef HAVE_GETADDRINFO_ET_AL
 	freeaddrinfo(ai);
+#endif /* HAVE_GETADDRINFO_ET_AL */
 
 	if (ses->fd >= 0)
 		return TRUE;
@@ -522,6 +552,7 @@ const gchar *get_gnocatan_dir(void)
 
 int net_open_listening_socket(const gchar * port, gchar ** error_message)
 {
+#ifdef HAVE_GETADDRINFO_ET_AL
 	int err;
 	struct addrinfo hints, *ai, *aip;
 	int yes;
@@ -594,17 +625,24 @@ int net_open_listening_socket(const gchar * port, gchar ** error_message)
 	}
 	*error_message = NULL;
 	return fd;
+#else /* HAVE_GETADDRINFO_ET_AL */
+	*error_message = g_strdup(_("Listening not yet supported on this platform."));
+	return -1;
+#endif /* HAVE_GETADDRINFO_ET_AL */
 }
 
 gboolean net_get_peer_name(gint fd, gchar ** hostname, gchar ** servname,
 			   gchar ** error_message)
 {
+#ifdef HAVE_GETADDRINFO_ET_AL
 	sockaddr_t peer;
 	socklen_t peer_len;
+#endif /* HAVE_GETADDRINFO_ET_AL */
 
 	*hostname = g_strdup(_("unknown"));
 	*servname = g_strdup(_("unknown"));
 
+#ifdef HAVE_GETADDRINFO_ET_AL
 	peer_len = sizeof(peer);
 	if (getpeername(fd, &peer.sa, &peer_len) < 0) {
 		*error_message =
@@ -632,6 +670,10 @@ gboolean net_get_peer_name(gint fd, gchar ** hostname, gchar ** servname,
 			return TRUE;
 		}
 	}
+#else /* HAVE_GETADDRINFO_ET_AL */
+	*error_message = g_strdup(_("Net_get_peer_name not yet supported on this platform."));
+	return FALSE;
+#endif /* HAVE_GETADDRINFO_ET_AL */
 }
 
 gint net_accept(gint accept_fd, gchar ** error_message)
